app/tests/fails/build_struct_unnamed.rs
use builder_macro::Builder;

#[derive(Builder)]
pub struct Point(i32, i32);

fn main() {}
