app/tests/fails/build_struct_unnamed.stderr
error: only structs with named fields are supported. Struct: Point
 --> tests/fails/build_struct_unnamed.rs:4:1
  |
4 | pub struct Point(i32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
